# hyphenationuz

./: .gitignore  CMakeLists.txt  hypenation_splitter.sln  hyphenation_splitter.sln
analytics/: brief.md
app/: CMakeLists.txt  main.cc  main.cpp
cmake/: Warnings.cmake
hypenation_splitter/: Program.cs  hypenation_splitter.sln
hypenation_splitter/hypenation_splitter/: Program.cs  Transform.cs
hyphenation_splitter/: Program.cs  Transform.cs
src/: CMakeLists.txt
src/common/: CMakeLists.txt  commondto.h  error_code.h  result.h
src/core/: CMakeLists.txt  action_point.cpp  action_point.h  core_error.h  miscellaneous.h  result.h  text_transformer.cpp  text_transformer.h  transform.cpp  transform.h  transform_logic.cpp  transform_logic.h  word_extractor.cpp
src/database/: CMakeLists.txt  data_repository.cpp  data_repository.h  db_error.h  dbresult.h  dbwrapper.cpp  dbwrapper.h  interface.h  parameters.h  repository.cpp  repository.h
src/transform_logic/: CMakeLists.txt  transform_logic.cpp  transform_logic.h  word_extractor.cpp  word_extractor.h  word_info_model.h
tests/: CMakeLists.txt  test_transform.cpp
